// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image should render a lazy image with a height and width 1`] = `
<React.Fragment>
  <t
    afterLoad={[Function]}
    alt="altText"
    beforeLoad={[Function]}
    className="lazy-img"
    delayMethod="throttle"
    delayTime={300}
    effect=""
    placeholderSrc=""
    sizes="600px"
    src="//i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags"
    srcSet="//i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags?h=800&w=600 600w"
    threshold={100}
    visibleByDefault={false}
    wrapperClassName=""
  />
  <JSXStyle
    id="4022069848"
  >
    img.lazy-img{width:100%;}
  </JSXStyle>
</React.Fragment>
`;

exports[`Image should render a lazy image with a height, width and crop it 1`] = `
<React.Fragment>
  <t
    afterLoad={[Function]}
    alt="altText"
    beforeLoad={[Function]}
    className="lazy-img"
    delayMethod="throttle"
    delayTime={300}
    effect=""
    placeholderSrc=""
    sizes="600px"
    src="//i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags"
    srcSet="//i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags?h=800&w=600&sm=c 600w"
    threshold={100}
    visibleByDefault={false}
    wrapperClassName=""
  />
  <JSXStyle
    id="4022069848"
  >
    img.lazy-img{width:100%;}
  </JSXStyle>
</React.Fragment>
`;

exports[`Image should render a lazy image with width only 1`] = `
<React.Fragment>
  <t
    afterLoad={[Function]}
    alt="altText"
    beforeLoad={[Function]}
    className="lazy-img"
    delayMethod="throttle"
    delayTime={300}
    effect=""
    placeholderSrc=""
    sizes="800px,(max-width: 600px) 560px,(max-width: 400px) 360px"
    src="//i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags"
    srcSet="//i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags?w=800 800w,//i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags?w=600 600w,//i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags?w=400 400w"
    threshold={100}
    visibleByDefault={false}
    wrapperClassName=""
  />
  <JSXStyle
    id="4022069848"
  >
    img.lazy-img{width:100%;}
  </JSXStyle>
</React.Fragment>
`;

exports[`Image should render an image with a height, width and crop it to a defined poi 1`] = `
<React.Fragment>
  <t
    afterLoad={[Function]}
    alt="altText"
    beforeLoad={[Function]}
    className="lazy-img"
    delayMethod="throttle"
    delayTime={300}
    effect=""
    placeholderSrc=""
    sizes="600px"
    src="//i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags"
    srcSet="//i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags?h=800&w=600&sm=c&scaleFit=poi&poi=0.30741794586182%2C0.64965417250147%2C0.125%2C0.18867924528302 600w"
    threshold={100}
    visibleByDefault={false}
    wrapperClassName=""
  />
  <JSXStyle
    id="4022069848"
  >
    img.lazy-img{width:100%;}
  </JSXStyle>
</React.Fragment>
`;

exports[`Image should render an image with a height, width and crop it to the default poi 1`] = `
<React.Fragment>
  <t
    afterLoad={[Function]}
    alt="altText"
    beforeLoad={[Function]}
    className="lazy-img"
    delayMethod="throttle"
    delayTime={300}
    effect=""
    placeholderSrc=""
    sizes="600px"
    src="//i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags"
    srcSet="//i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags?h=800&w=600&sm=c&scaleFit=poi&poi=%7B%24this.metadata.pointOfInterest.x%7D%2C%7B%24this.metadata.pointOfInterest.y%7D%2C%7B%24this.metadata.pointOfInterest.w%7D%2C%7B%24this.metadata.pointOfInterest.h%7D 600w"
    threshold={100}
    visibleByDefault={false}
    wrapperClassName=""
  />
  <JSXStyle
    id="4022069848"
  >
    img.lazy-img{width:100%;}
  </JSXStyle>
</React.Fragment>
`;
